@@ -1,4 +1,4 @@
 DIST istack-commons-20070711.tar.bz2 15591 RMD160 b8f91fac3edcda238c5cb48dbffadb3836859b7e SHA1 1d52dbcab83146561cf10e38d1f0769a303f0423 SHA256 c814ea8b03abfa89aa416b87d700c8840a0fa2e4eb5978c50e92ffa080e12ab1
-EBUILD istack-commons-tools-20070711.ebuild 1216 RMD160 d28debd86917139f6b5e714237df1af610632a1c SHA1 5f5d78aecb618015372953dbbbac4a7ea2451451 SHA256 4b37d35f194dc6e52f1238fb0a7e275d71a66b9d9c8a474b167d6f180d9858bb
-MISC ChangeLog 346 RMD160 615e33ba5bb7161c6c29bbac33be58b97760307f SHA1 8ae2b34f20c8e24fbcf112848ca127aeac83b839 SHA256 cf17858707ac01f7c47a429811a3d3dc6e50f602cec762c344616ae023d913f1
+EBUILD istack-commons-tools-20070711.ebuild 1266 RMD160 1e89338ba66742875269cc952fdf418a07d92e87 SHA1 aa541f565a3ffae71a6d9f965847a1c6427d2e36 SHA256 289e34b2244ecd105a01904b18718487c130df8c7422625ae805ae6e8bd0272d
+MISC ChangeLog 459 RMD160 43f0c27941147c8558f8b60a253a7ab93365e9ed SHA1 c6939b02e70627681795ecd0ca6c312bf513fd1c SHA256 4463c3b7ad9f7aac4fe9c740a31a4fd03f19efe86a539c448a96cb84e96338be
 MISC metadata.xml 159 RMD160 7da5c733c224383ffe350605bc36721a3ff2536f SHA1 99c2655c7bbee2cbc8c79edb2d00d481d62faf95 SHA256 a4ced33e98b00e3a3f725c4c40ef8e76c338db53389465ef871105fbe6e8cbbb
